# CVProject

./: .gitignore  ANN.cpp  ANN.hpp  BBoxSelector.cpp  BlackWhite_He.cpp  BlackWhite_He.h  BoatSeaDetector.cpp  BuildDataset.cpp  CMakeLists.txt  DatasetHelper.cpp  DatasetHelper.hpp  DecisionTree_class_and_test.cpp  ImageClassifier.cpp  KMeansClassifier.cpp  README.md  SegmentationHelper.cpp  SegmentationHelper.hpp  SiftMasked.h  TestAnn.cpp  TrainAnn (2).cpp  TrainAnn.cpp  Utils.cpp  Utils.hpp  WaterSelector.cpp  kMeansClassifier.hpp  sea_selector.cpp  test_binary_to_bboxes.cpp  test_siftMasked.cpp  video_track.cpp  video_track.h
ann_files/: ANN.cpp  ANN.hpp  TrainAnn.cpp
decision_trees/: BuildDataset.cpp  DecisionTree_class_and_test.cpp
